--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.1",
     "react-hook-form": "^7.29.0",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
