--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "react-select": "^5.3.2",
+    "socket.io-client": "^4.5.1",
     "swiper": "^8.2.4",
     "web-vitals": "^2.1.4"
   },
