--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "react-dropzone": "^14.2.1",
     "react-hook-form": "^7.29.0",
     "react-redux": "^8.0.2",
+    "react-responsive": "^9.0.0-beta.10",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "react-select": "^5.4.0",
+    "redux-persist": "^6.0.0",
     "socket.io-client": "^4.5.1",
     "swiper": "^8.2.4",
     "web-vitals": "^2.1.4"
