--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "react-select": "^5.4.0",
+    "react-toastify": "^9.0.5",
     "swiper": "^8.2.4",
+    "toastify-js": "^1.11.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
