--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "jwt-decode": "^3.1.2",
     "react": "^18.0.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.1",
@@ -22,6 +23,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "react-select": "^5.4.0",
+    "redux-persist": "^6.0.0",
     "swiper": "^8.2.4",
     "web-vitals": "^2.1.4"
   },
