--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.1",
     "react-hook-form": "^7.29.0",
+    "react-redux": "^8.0.2",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
-    "react-select": "^5.4.0",
+    "react-select": "^5.3.2",
     "react-toastify": "^9.0.5",
+    "redux": "^4.2.0",
     "swiper": "^8.2.4",
     "toastify-js": "^1.11.2",
     "web-vitals": "^2.1.4"
