--- a/package.json
+++ b/package.json
@@ -9,16 +9,14 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
     "@reduxjs/toolkit": "^1.8.3",
-    "@testing-library/jest-dom": "^5.16.3",
-    "@testing-library/react": "^12.1.4",
-    "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
-    "moment": "^2.29.4",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.4",
     "react": "^18.0.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.1",
     "react-hook-form": "^7.29.0",
+    "react-paginate": "^8.1.3",
     "react-redux": "^8.0.2",
     "react-responsive": "^9.0.0-beta.10",
     "react-router": "^6.3.0",
@@ -26,9 +24,9 @@
     "react-scripts": "5.0.0",
     "react-select": "^5.3.2",
     "react-toastify": "^9.0.5",
+    "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
     "socket.io-client": "^4.5.1",
-    "redux": "^4.2.0",
     "swiper": "^8.2.4",
     "toastify-js": "^1.11.2",
     "web-vitals": "^2.1.4"
@@ -56,5 +54,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^14.2.6"
   }
 }
