--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
-    "moment": "^2.29.4",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.4",
+    "query-string": "^7.1.1",
     "react": "^18.0.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.1",
@@ -26,9 +27,9 @@
     "react-scripts": "5.0.0",
     "react-select": "^5.3.2",
     "react-toastify": "^9.0.5",
+    "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
     "socket.io-client": "^4.5.1",
-    "redux": "^4.2.0",
     "swiper": "^8.2.4",
     "toastify-js": "^1.11.2",
     "web-vitals": "^2.1.4"
